sumo/tests/sumo/errors/routes/one_edge_route/options.sumo
-n net.net.xml -r input_routes.rou.xml -b 0 -e 10000

